--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="test1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
